[package]
name = "rust-algorithm-optimization"
version = "0.1.0"
edition = "2021"

[lib]
name = "table_problem"
path = "src/lib.rs"


[dependencies]
ahash = "0.8"
chrono = {version =  "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
rand = "0.8"
itertools = "0.13"
smallvec = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
debug = true